<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textCabecalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="32dp"
        android:textColor="@color/red"
        android:text="@string/textCabecalho"
        android:layout_marginTop="4dp"/>

    <EditText
        android:id="@+id/editDistance"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:hint="@string/editDistance"
        android:inputType="number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/textTotalKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTotalKm"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:hint="@string/editPrice"
        android:inputType="number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textPrice"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editAutonomo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:hint="@string/editAutonomo"
        android:inputType="number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/textAutonomo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAutonomo"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textResultado"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="64dp"/>

    <TextView
        android:id="@+id/labelResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelResultado"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="32sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/blue"/>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonCalculate"
        android:textSize="26sp"
        android:padding="16dp"
        android:layout_margin="32dp"
        android:backgroundTint="@color/green"
        android:textAllCaps="true"/>

</LinearLayout>